crates/pg_syntax/tests/snapshots/postgres_regress/date@157.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT date '1999 08 01';"
---
SelectStmt@0..25
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..25
    Ident@7..11 "date"
    Whitespace@11..12 " "
    TypeCast@12..25
      AConst@12..24
        Sconst@12..24 "'1999 08 01'"
      Ascii59@24..25 ";"

