crates/pg_syntax/tests/snapshots/postgres_regress/date@161.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT date '5874898-01-01';"
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..28
    Ident@7..11 "date"
    Whitespace@11..12 " "
    TypeCast@12..28
      AConst@12..27
        Sconst@12..27 "'5874898-01-01'"
      Ascii59@27..28 ";"

