crates/pg_syntax/tests/snapshots/postgres_regress/date@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 FROM DATE_TBL WHERE f1 < '2000-01-01';"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "f1"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeVar@15..23
    Ident@15..23 "DATE_TBL"
  Whitespace@23..24 " "
  Where@24..29 "WHERE"
  Whitespace@29..30 " "
  AExpr@30..47
    ColumnRef@30..32
      Ident@30..32 "f1"
    Whitespace@32..33 " "
    Ascii60@33..34 "<"
    Whitespace@34..35 " "
    AConst@35..47
      Sconst@35..47 "'2000-01-01'"
  Ascii59@47..48 ";"

